fixing spacing issue

--- a/terrain-react-app/src/components/PerlinNoiseOctave/PerlinNoiseOctave.scss
+++ b/terrain-react-app/src/components/PerlinNoiseOctave/PerlinNoiseOctave.scss
@@ -1,3 +1,5 @@
+@import '../../scss/_required.scss';
+
 .perlin-noise-octave {
 
     position: relative;
@@ -28,4 +30,15 @@
         }
     }
 
+}
+
+@include media-breakpoint-between(xs, sm) {
+
+    .perlin-noise-octave {
+
+        .perlin-noise-octave-delete {
+            top: -23px;
+            right: -23px;
+        }
+    }
 }
